fine central footer

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <!-- inizio footer -->
     <div class="conteiner-footer row">
 
-        <section class="left-footer row">
+        <section class="row">
             <div class="tasti"><i class="fa-solid fa-microphone icons"></i>
                 <h3>Mute</h3>
             </div>
@@ -347,8 +347,46 @@
             </div>
             <span class="row arrow"><i class="fa-solid fa-angle-up"></i></span>
         </section>
-        <section>tasti</section>
-        <section>chiusura</section>
+
+
+        <section class="row">
+            
+            <div class="tasti"><i class="fa-solid fa-user-plus icons"></i>
+                <h3>Invite</h3>
+            </div>
+
+            <div class="tasti"><i class="fa-solid fa-users icons"></i>
+                <h3>Manage Participants</h3>
+            </div>
+
+            <div class="tasti"><i class="fa-solid fa-chart-column icons"></i>
+                <h3>Polling</h3>
+            </div>
+
+            <div class="tasti"><i class="fa-solid fa-share-from-square icons eccezione"></i>
+                <h3>Share screen</h3>
+            </div>
+
+            <div class="tasti"><i class="fa-regular fa-comment-dots icons"></i>
+                <h3>Chat</h3>
+            </div>
+
+            <div class="tasti"><i class="fa-solid fa-record-vinyl icons"></i>
+                <h3>Record</h3>
+            </div>
+
+            <div class="tasti"><i class="fa-solid fa-layer-group icons"></i>
+                <h3>Breakout Rooms</h3>
+            </div>
+
+            <div class="tasti"><i class="fa-solid fa-ellipsis icons"></i>
+                <h3>More</h3>
+            </div>
+
+        </section>
+        <section class="row">
+            <div></div>
+        </section>
 
 
     </div>
