--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
             <div class="tasti"><i class="fa-solid fa-share-from-square icons eccezione"></i>
                 <h3>Share screen</h3>
             </div>
+            <span class="row arrow"><i class="fa-solid fa-angle-up"></i></span>
 
             <div class="tasti"><i class="fa-regular fa-comment-dots icons"></i>
                 <h3>Chat</h3>
@@ -385,7 +386,7 @@
 
         </section>
         <section class="row">
-            <div></div>
+            <div class="end">End Meeting</div>
         </section>
 
 
