--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <!-- inizio right footer -->
 
         <section class="row">
-            <div class="end">End Meeting</div>
+            <div class="end row">End Meeting</div>
         </section>
 
         <!-- fine right footer -->
